declaring the compiler plugin testCompile goal to run